adição pagina produto

--- a/add-produto.html
+++ b/add-produto.html
@@ -9,7 +9,7 @@
             src="https://kit.fontawesome.com/162b81ecbe.js"
             crossorigin="anonymous"
         ></script>
-        <title>Alura Geek</title>
+        <title>Alura Geek - Adicionar Produto</title>
     </head>
     <body>
         <header>
