--- a/produtos.html
+++ b/produtos.html
@@ -9,7 +9,7 @@
             src="https://kit.fontawesome.com/162b81ecbe.js"
             crossorigin="anonymous"
         ></script>
-        <title>Alura Geek</title>
+        <title>Alura Geek - Todos os produtos</title>
     </head>
     <body>
         <header>
