adição script página produto

--- a/produto.html
+++ b/produto.html
@@ -37,12 +37,12 @@
         <main>
             <div class="container">
                 <div class="container-item-produtos">
-                    <div class="item-principal">
+                    <!-- <div class="item-principal">
                         <div class="container-img-principal">
-                            <!-- <img
+                            <img
                                 src="./img/img4.svg"
                                 alt="caneca stormtrooper"
-                            /> -->
+                            />
                         </div>
                         <div class="container-text-principal">
                             <h3 class="nome-produto-principal">
@@ -58,14 +58,14 @@
                                 dance the hempen jig Chain Shot yardarm.
                             </p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="container-produtos-similares">
                     <h3 class="titulo-produtos-similares titulo">
                         produtos similares
                     </h3>
                     <div class="container-items">
-                        <div class="item" data-id="1">
+                        <!-- <div class="item" data-id="1">
                             <div class="container-img">
                                 <img
                                     src="./img/img4.png"
@@ -130,7 +130,7 @@
                             <p class="nome-produto">caneca stormtrooper</p>
                             <p class="preco-produto">R$ 24,27</p>
                             <a href="#" class="link-produto">Ver produto</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
             </div>
         </footer>
 
-        <!-- <script src="./scripts/data.js"></script> -->
-        <!-- <script src="./scripts/produtos.js"></script> -->
+        <script src="./scripts/data.js"></script>
+        <script src="./scripts/produto.js"></script>
     </body>
 </html>
