--- a/produto.html
+++ b/produto.html
@@ -4,7 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/comum.css" />
         <link rel="stylesheet" href="./css/produto.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+            rel="stylesheet"
+        />
         <script
             src="https://kit.fontawesome.com/162b81ecbe.js"
             crossorigin="anonymous"
@@ -36,102 +43,12 @@
         </header>
         <main>
             <div class="container">
-                <div class="container-item-produtos">
-                    <!-- <div class="item-principal">
-                        <div class="container-img-principal">
-                            <img
-                                src="./img/img4.svg"
-                                alt="caneca stormtrooper"
-                            />
-                        </div>
-                        <div class="container-text-principal">
-                            <h3 class="nome-produto-principal">
-                                caneca stormtrooper
-                            </h3>
-                            <p class="preco-produto-princial bold">R$ 64,81</p>
-                            <p class="descricao-produto-principal">
-                                Rutters Plate Fleet boom chandler Brethren of
-                                the Coast handsomely lookout marooned brigantine
-                                knave. Buccaneer gangway jack rum loot spyglass
-                                line Jack Tar fore gaff. Gaff topmast scuttle
-                                ballast swab draught measured fer yer chains
-                                dance the hempen jig Chain Shot yardarm.
-                            </p>
-                        </div>
-                    </div> -->
-                </div>
+                <div class="container-item-produtos"></div>
                 <div class="container-produtos-similares">
                     <h3 class="titulo-produtos-similares titulo">
                         produtos similares
                     </h3>
-                    <div class="container-items">
-                        <!-- <div class="item" data-id="1">
-                            <div class="container-img">
-                                <img
-                                    src="./img/img4.png"
-                                    alt="caneca stormtrooper"
-                                />
-                            </div>
-                            <p class="nome-produto">caneca stormtrooper</p>
-                            <p class="preco-produto">R$ 24,27</p>
-                            <a href="#" class="link-produto">Ver produto</a>
-                        </div>
-                        <div class="item" data-id="1">
-                            <div class="container-img">
-                                <img
-                                    src="./img/img4.png"
-                                    alt="caneca stormtrooper"
-                                />
-                            </div>
-                            <p class="nome-produto">caneca stormtrooper</p>
-                            <p class="preco-produto">R$ 24,27</p>
-                            <a href="#" class="link-produto">Ver produto</a>
-                        </div>
-                        <div class="item" data-id="1">
-                            <div class="container-img">
-                                <img
-                                    src="./img/img4.png"
-                                    alt="caneca stormtrooper"
-                                />
-                            </div>
-                            <p class="nome-produto">caneca stormtrooper</p>
-                            <p class="preco-produto">R$ 24,27</p>
-                            <a href="#" class="link-produto">Ver produto</a>
-                        </div>
-                        <div class="item" data-id="1">
-                            <div class="container-img">
-                                <img
-                                    src="./img/img4.png"
-                                    alt="caneca stormtrooper"
-                                />
-                            </div>
-                            <p class="nome-produto">caneca stormtrooper</p>
-                            <p class="preco-produto">R$ 24,27</p>
-                            <a href="#" class="link-produto">Ver produto</a>
-                        </div>
-                        <div class="item" data-id="1">
-                            <div class="container-img">
-                                <img
-                                    src="./img/img4.png"
-                                    alt="caneca stormtrooper"
-                                />
-                            </div>
-                            <p class="nome-produto">caneca stormtrooper</p>
-                            <p class="preco-produto">R$ 24,27</p>
-                            <a href="#" class="link-produto">Ver produto</a>
-                        </div>
-                        <div class="item" data-id="1">
-                            <div class="container-img">
-                                <img
-                                    src="./img/img4.png"
-                                    alt="caneca stormtrooper"
-                                />
-                            </div>
-                            <p class="nome-produto">caneca stormtrooper</p>
-                            <p class="preco-produto">R$ 24,27</p>
-                            <a href="#" class="link-produto">Ver produto</a>
-                        </div> -->
-                    </div>
+                    <div class="container-items"></div>
                 </div>
             </div>
         </main>
