--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             src="https://kit.fontawesome.com/162b81ecbe.js"
             crossorigin="anonymous"
         ></script>
-        <title>Alura Geek</title>
+        <title>Alura Geek - Home</title>
     </head>
     <body>
         <header>
